--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -30,5 +30,5 @@ jobs:
       - run: cp -a ./  $WORKDIR
       - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh
       - run: ping -c 4 192.168.1.248
-      - run: smbclient -m SMB3 -L 192.168.1.248 -U administrator%Scale2020!
       - run: smbclient -L 192.168.1.248 -U administrator%Scale2020!
+      - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls
