--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -32,4 +32,4 @@ jobs:
       - run: ping -c 4 192.168.1.248
       - run: smbclient -L 192.168.1.248 -U administrator%Scale2020!
       - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls
-      - run: smbclient //192.168.1.248/SMB_SHARE -U administrator%Scale2020! && ls
+      - run: smbclient //192.168.1.248/${{ secrets.SMB_SHARE }} -U administrator%Scale2020! && ls
