--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -36,4 +36,4 @@ jobs:
       - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls
       - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls
       - run: dig ${{ secrets.SMB_SERVER }}
-      - run: smbclient //SMB_SERVER/azure-sync -U administrator%Scale2020! && ls
+      - run: smbclient //$_SMB_SERVER/azure-sync -U administrator%Scale2020! && ls
