--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -37,6 +37,6 @@ jobs:
       - run: smbclient //192.168.1.248/azure-sync -U remotedc/administrator%Scale2020! && ls -a
       - run: smbclient //192.168.1.248/azure-sync -U remotedc/administrator%Scale2020! && cd tests && ls -a
       - run: smbclient //192.168.1.248/azure-sync -U remotedc/administrator%Scale2020! && cd tests/integration && ls -a
-      - run: smbclient -L ${{ secrets.SMB_SERVER }} -U ${{ secrets.SMB_USERNAME }}%${{ secrets.SMB_PASSWORD }}
+      - run: smbclient //192.168.1.248/azure-sync/integration-test -U remotedc/administrator%Scale2020! && ls
       - run: dig ${{ secrets.SMB_SERVER }}
       - run: smbclient //${{ secrets.SMB_SERVER }} ${{ secrets.SMB_SHARE }} -U administrator%Scale2020! && ls
