--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -41,5 +41,8 @@ jobs:
       - run: smbclient //192.168.1.248/azure-sync -U pm-edge/administrator%Scale2020! -W pm-edge -c 'cd integration-test ls'
       - run: smbclient //192.168.1.248/azure-sync -U pm-edge/administrator%Scale2020! -W pm-edge -c 'cd integration-test && ls'
       - run: smbclient //192.168.1.248/azure-sync -U pm-edge/administrator%Scale2020! -W pm-edge -c 'ls'
-      - run: dig ${{ secrets.SMB_SERVER }}
-      - run: smbclient //${{ secrets.SMB_SERVER }} ${{ secrets.SMB_SHARE }} -U administrator%Scale2020! && ls
+      - run: smbclient  //192.168.1.248/azure-sync -U pm-edge/administrator%Scale2020! -W pm-edge << SMBCLIENTCOMMANDS
+cd integration-test
+ls
+exit
+SMBCLIENTCOMMANDS
