--- a/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
@@ -64,8 +64,11 @@
       - vm_created.record.0.nics.1.type == "virtio"
       - vm_created.record.0.disks.2.type == "ide_cdrom"
       - vm_created.record.0.disks.2.disk_slot == 1
+      # VM with "uuid": "e640e784-606f-4b96-9de2-31970e0a13e8" has ISO with "iso_name": "cloud-init-e640e784.iso"
+      - '"{{ vm_created.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created.record.0.uuid | split("-")) [0] }}.iso"'
       - vm_created.record.0.disks.1.type == "ide_cdrom"
       - vm_created.record.0.disks.1.disk_slot == 0
+      - vm_created.record.0.disks.1.iso_name == ""
       - vm_created.record.0.disks.0.type == "virtio_disk"
       - vm_created.record.0.disks.0.disk_slot == 0
       - vm_created.record.0.boot_devices | length == 2
@@ -132,8 +135,10 @@
       - vm_created_2.record.0.nics.1.type == "virtio"
       - vm_created_2.record.0.disks.2.type == "ide_cdrom"
       - vm_created_2.record.0.disks.2.disk_slot == 1
+      - '"{{ vm_created_2.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created_2.record.0.uuid | split("-")) [0] }}.iso"'
       - vm_created_2.record.0.disks.1.type == "ide_cdrom"
       - vm_created_2.record.0.disks.1.disk_slot == 0
+      - vm_created_2.record.0.disks.1.iso_name == ""
       - vm_created_2.record.0.disks.0.type == "virtio_disk"
       - vm_created_2.record.0.disks.0.disk_slot == 0
       - vm_created_2.record.0.boot_devices | length == 2
@@ -165,8 +170,10 @@
       - vm_created.record.0.nics.1.type == "virtio"
       - vm_created.record.0.disks.2.type == "ide_cdrom"    # This stays, module logic should recognize this is cloud_init IDE from the disk name.
       - vm_created.record.0.disks.2.disk_slot == 1
+      - '"{{ vm_created.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created.record.0.uuid | split("-")) [0] }}.iso"'
       - vm_created.record.0.disks.1.type == "ide_cdrom"
       - vm_created.record.0.disks.1.disk_slot == 0
+      - vm_created.record.0.disks.1.iso_name == ""
       - vm_created.record.0.disks.0.type == "virtio_disk"
       - vm_created.record.0.disks.0.disk_slot == 0
       - vm_created.record.0.boot_devices | length == 2
@@ -223,8 +230,10 @@
       - vm_created.record.0.nics.1.type == "virtio"
       - vm_created.record.0.disks.2.type == "ide_cdrom"
       - vm_created.record.0.disks.2.disk_slot == 1
+      - '"{{ vm_created.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created.record.0.uuid | split("-")) [0] }}.iso"'
       - vm_created.record.0.disks.1.type == "ide_cdrom"
       - vm_created.record.0.disks.1.disk_slot == 0
+      - vm_created.record.0.disks.1.iso_name == ""
       - vm_created.record.0.disks.0.type == "virtio_disk"
       - vm_created.record.0.disks.0.disk_slot == 0
       - vm_created.record.0.boot_devices | length == 2
@@ -255,8 +264,10 @@
       - vm_created_2.record.0.nics.1.type == "virtio"
       - vm_created_2.record.0.disks.2.type == "ide_cdrom"
       - vm_created_2.record.0.disks.2.disk_slot == 1
+      - '"{{ vm_created_2.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created_2.record.0.uuid | split("-")) [0] }}.iso"'
       - vm_created_2.record.0.disks.1.type == "ide_cdrom"
       - vm_created_2.record.0.disks.1.disk_slot == 0
+      - vm_created_2.record.0.disks.1.iso_name == ""
       - vm_created_2.record.0.disks.0.type == "virtio_disk"
       - vm_created_2.record.0.disks.0.disk_slot == 0
       - vm_created_2.record.0.boot_devices | length == 2
@@ -313,8 +324,10 @@
       - vm_created_2.record.0.nics.1.type == "virtio"
       - vm_created_2.record.0.disks.2.type == "ide_cdrom"
       - vm_created_2.record.0.disks.2.disk_slot == 1
+      - '"{{ vm_created_2.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created_2.record.0.uuid | split("-")) [0] }}.iso"'
       - vm_created_2.record.0.disks.1.type == "ide_cdrom"
       - vm_created_2.record.0.disks.1.disk_slot == 0
+      - vm_created_2.record.0.disks.1.iso_name == ""
       - vm_created_2.record.0.disks.0.type == "virtio_disk"
       - vm_created_2.record.0.disks.0.disk_slot == 0
       - vm_created_2.record.0.boot_devices | length == 2
@@ -352,8 +365,10 @@
       - result.record.0.blockDevs | length == 3
       - result.record.0.blockDevs.2.type == "IDE_CDROM"
       - result.record.0.blockDevs.2.slot == 1
+      - result.record.0.blockDevs.2.name == ""
       - result.record.0.blockDevs.1.type == "IDE_CDROM"
       - result.record.0.blockDevs.1.slot == 0
+      - result.record.0.blockDevs.1.name == ""
       - result.record.0.blockDevs.0.type == "VIRTIO_DISK"
       - result.record.0.blockDevs.0.slot == 0
 
@@ -403,6 +418,7 @@
       - vm_created.record.0.nics.1.type == "virtio"
       - vm_created.record.0.disks.1.type == "ide_cdrom"
       - vm_created.record.0.disks.1.disk_slot == 0
+      - vm_created.record.0.disks.1.iso_name == ""
       - vm_created.record.0.disks.0.type == "virtio_disk"
       - vm_created.record.0.disks.0.disk_slot == 0
       - vm_created.record.0.boot_devices | length == 2
@@ -434,6 +450,7 @@
       - vm_created.record.0.nics.1.type == "virtio"
       - vm_created.record.0.disks.1.type == "ide_cdrom"
       - vm_created.record.0.disks.1.disk_slot == 0
+      - vm_created.record.0.disks.1.iso_name == ""
       - vm_created.record.0.disks.0.type == "virtio_disk"
       - vm_created.record.0.disks.0.disk_slot == 0
       - vm_created.record.0.boot_devices | length == 2
@@ -473,6 +490,7 @@
       - result.record.0.blockDevs.2.slot == 1
       - result.record.0.blockDevs.1.type == "IDE_CDROM"
       - result.record.0.blockDevs.1.slot == 0
+      - result.record.0.blockDevs.1.name == ""
       - result.record.0.blockDevs.0.type == "VIRTIO_DISK"
       - result.record.0.blockDevs.0.slot == 0
 
@@ -524,6 +542,7 @@
       - vm_created_2.record.0.nics.1.type == "virtio"
       - vm_created_2.record.0.disks.1.type == "ide_cdrom"
       - vm_created_2.record.0.disks.1.disk_slot == 0
+      - vm_created_2.record.0.disks.1.iso_name == ""
       - vm_created_2.record.0.disks.0.type == "virtio_disk"
       - vm_created_2.record.0.disks.0.disk_slot == 0
       - vm_created_2.record.0.boot_devices | length == 2
@@ -554,6 +573,7 @@
       - vm_created_2.record.0.nics.1.type == "virtio"
       - vm_created_2.record.0.disks.1.type == "ide_cdrom"
       - vm_created_2.record.0.disks.1.disk_slot == 0
+      - vm_created_2.record.0.disks.1.iso_name == ""
       - vm_created_2.record.0.disks.0.type == "virtio_disk"
       - vm_created_2.record.0.disks.0.disk_slot == 0
       - vm_created_2.record.0.boot_devices | length == 2
@@ -563,6 +583,80 @@
       - vm_created_2.record.0.boot_devices.1.vlan == 1
       - vm_created_2.record.0.machine_type == "BIOS"
 
+
+# ----------------------------------Job-------------------------------------------------------------------------------------
+# Using scale_computing.hypercore.vm with cloud-init data, on existing VM with no cloud-init ISO,
+# will not create new ISO.
+- name: Create the XLAB-cloud-init-integration (Idempotence, cloud-init data present, but ISO manually removed)
+  scale_computing.hypercore.vm: *cloud-init-integration
+  register: vm_created
+- ansible.builtin.assert:
+    that:
+      - vm_created is not changed
+      - vm_created is succeeded
+      - vm_created.record.0.description == "Demo VM"
+      - vm_created.record.0.memory == 536870912
+      - vm_created.record.0.tags == ["Xlab"]
+      - vm_created.record.0.vcpu == 2
+      - vm_created.record.0.vm_name == "XLAB-cloud-init-integration"
+      - vm_created.record.0.disks | length == 2
+      - vm_created.record.0.nics | length == 2
+      - vm_created.record.0.nics.0.vlan == 1
+      - vm_created.record.0.nics.0.type == "RTL8139"
+      - vm_created.record.0.nics.1.vlan == 2
+      - vm_created.record.0.nics.1.type == "virtio"
+#      - vm_created.record.0.disks.2.type == "ide_cdrom"    # This stays, module logic should recognize this is cloud_init IDE from the disk name.
+#      - vm_created.record.0.disks.2.disk_slot == 1
+#      - '"{{ vm_created.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created.record.0.uuid | split("-")) [0] }}.iso"'
+      - vm_created.record.0.disks.1.type == "ide_cdrom"
+      - vm_created.record.0.disks.1.disk_slot == 0
+      - vm_created.record.0.disks.1.iso_name == ""
+      - vm_created.record.0.disks.0.type == "virtio_disk"
+      - vm_created.record.0.disks.0.disk_slot == 0
+      - vm_created.record.0.boot_devices | length == 2
+      - vm_created.record.0.boot_devices.0.type == "virtio_disk"
+      - vm_created.record.0.boot_devices.1.type == "RTL8139"
+      - vm_created.record.0.boot_devices.0.disk_slot == 0
+      - vm_created.record.0.boot_devices.1.vlan == 1
+      - vm_created.record.0.power_state == "stopped"
+      - vm_created.record.0.machine_type == "BIOS"
+
+- name: Create and start the XLAB-cloud-init-integration-2 (Idempotence, cloud-init data present, but ISO manually removed)
+  scale_computing.hypercore.vm: *cloud-init-integration-2
+  register: vm_created_2
+- ansible.builtin.assert:
+    that:
+      - vm_created_2 is not changed
+      - vm_created_2 is succeeded
+      - vm_created_2.record.0.description == "Demo VM"
+      - vm_created_2.record.0.memory == 536870912
+      - vm_created_2.record.0.tags == ["Xlab"]
+      - vm_created_2.record.0.vcpu == 2
+      - vm_created_2.record.0.vm_name == "XLAB-cloud-init-integration-2"
+      - vm_created_2.record.0.disks | length == 2
+      - vm_created_2.record.0.nics | length == 2
+      - vm_created_2.record.0.nics.0.vlan == 1
+      - vm_created_2.record.0.nics.0.type == "RTL8139"
+      - vm_created_2.record.0.nics.1.vlan == 2
+      - vm_created_2.record.0.nics.1.type == "virtio"
+#      - vm_created_2.record.0.disks.2.type == "ide_cdrom"
+#      - vm_created_2.record.0.disks.2.disk_slot == 1
+#      - '"{{ vm_created_2.record.0.disks.2.iso_name }}" == "cloud-init-{{ (vm_created_2.record.0.uuid | split("-")) [0] }}.iso"'
+      - vm_created_2.record.0.disks.1.type == "ide_cdrom"
+      - vm_created_2.record.0.disks.1.disk_slot == 0
+      - vm_created_2.record.0.disks.1.iso_name == ""
+      - vm_created_2.record.0.disks.0.type == "virtio_disk"
+      - vm_created_2.record.0.disks.0.disk_slot == 0
+      - vm_created_2.record.0.boot_devices | length == 2
+      - vm_created_2.record.0.boot_devices.0.type == "virtio_disk"
+      - vm_created_2.record.0.boot_devices.1.type == "RTL8139"
+      - vm_created_2.record.0.boot_devices.0.disk_slot == 0
+      - vm_created_2.record.0.boot_devices.1.vlan == 1
+      - vm_created_2.record.0.power_state == "started"
+      - vm_created_2.record.0.machine_type == "BIOS"
+
+# -----------------------------------------------------------------------------------------------------------------------
+# Cleanup
 - name: Delete XLAB-vm (END)
   scale_computing.hypercore.vm: *delete-XLAB-vm
   loop:
