--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -120,4 +120,28 @@ jobs:
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
       - run: ansible-galaxy collection install community.general
-      - run: cd $WORKDIR && ansible-playbook tests/integration/ci_replica_cleanup.yml
+      - run: cd $WORKDIR && ansible-playbook tests/integration/cleanup/ci_replica_cleanup.yml
+
+  smb_cleanup:
+    needs:
+      - integration-test
+    runs-on: [self-hosted]
+    container: python:3.10-slim-buster
+    env:
+      SC_HOST: ${{ secrets.SC_HOST }}
+      SC_USERNAME: ${{ secrets.SC_USERNAME }}
+      SC_PASSWORD: ${{ secrets.SC_PASSWORD }}
+      SMB_SERVER: ${{ secrets.SMB_SERVER }}
+      SMB_SHARE: ${{ secrets.SMB_SHARE }}
+      SMB_USERNAME: ${{ secrets.SMB_USERNAME }}
+      SMB_PASSWORD: ${{ secrets.SMB_PASSWORD }}
+      ANSIBLE_COLLECTIONS_PATH: /work-dir
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - run: apt update
+      - run: apt install -y git make
+      - run: apt install -y smbclient
+      - run: mkdir -p $WORKDIR
+      - run: cp -a ./  $WORKDIR
+      - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh ${{ secrets.SMB_SERVER }} ${{ secrets.SMB_SHARE }} "${{ secrets.SMB_USERNAME }}" ${{ secrets.SMB_PASSWORD }}
