--- a/tests/integration/targets/vm_boot_devices/tasks/main.yml
+++ b/tests/integration/targets/vm_boot_devices/tasks/main.yml
@@ -3,7 +3,7 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
-    SC_TIMEOUT: "{{ sc_timeout | default(10) }}"
+    SC_TIMEOUT: "{{ sc_timeout|default(10, true) }}"
 
   block:
     - name: Delete the VM with name vm-integration-test-boot_devices, if it exists from before
