--- a/examples/virtual_disk.yml
+++ b/examples/virtual_disk.yml
@@ -8,14 +8,14 @@
     # image_url: https://github.com/ddemlow/RestAPIExamples/blob/master/ubuntu18_04-cloud-init/ubuntu18cloudimage.qcow2
     image_filename: "{{ image_url | split('/') | last }}"
     image_remove_old: false
-    sc_host: https://10.100.20.38 #TODO
+    sc_host: https://10.100.20.38 # TODO
     sc_username: admin
     sc_password: admin
 
   tasks:
     # # ------------------------------------------------------
     - name: Download Virtual Disk {{ image_filename }} from URL
-      ansible.builtin.get_url: #TODO: what if file doesn't download completely?
+      ansible.builtin.get_url: # TODO: what if file doesn't download completely?
         url: "{{ image_url }}"
         dest: /tmp/{{ image_filename }}
 
@@ -24,7 +24,7 @@
         path: /tmp/{{ image_filename }}
       register: disk_file_info
 
-    #TODO
+    # TODO
     # - name: (Optionally) remove existing Virtual Disk {{ image_filename }} from HyperCore
     #   scale_computing.hypercore.api:
     #     action: get
@@ -36,14 +36,14 @@
     #   register: virtualDiskResult
 
     # ------------------------------------------------------
-    - name: "Upload Virtual Disk {{ image_filename }} to HyperCore"
+    - name: Upload Virtual Disk {{ image_filename }} to HyperCore
       scale_computing.hypercore.api:
         action: put
         cluster_instance:
           host: "{{ sc_host }}"
           username: "{{ sc_username }}"
           password: "{{ sc_password }}"
-        endpoint: "/rest/v1/VirtualDisk/upload"
+        endpoint: /rest/v1/VirtualDisk/upload
         data:
           filename: "{{ image_filename }}"
           filesize: "{{ disk_file_info.stat.size }}"
@@ -58,7 +58,7 @@
           host: "{{ sc_host }}"
           username: "{{ sc_username }}"
           password: "{{ sc_password }}"
-        endpoint: "/rest/v1/VirtualDisk/{{ uploadResult.record.createdUUID }}"
+        endpoint: /rest/v1/VirtualDisk/{{ uploadResult.record.createdUUID }}
       register: result
 
     - name: Show uploaded disk info
