--- a/examples/email_alert.yml
+++ b/examples/email_alert.yml
@@ -5,6 +5,11 @@
     email: example@example.com
     state: present # absent, test --> create, delete, test
 
+- name: Send a test email
+  scale_computing.hypercore.email_alert:
+    email: example@example.com
+    state: test
+
 - name: Modify previously created Email alert recipient
   scale_computing.hypercore.email_alert:
     email: example@example.com
