--- a/tests/integration/targets/dns_config/tasks/02_dns_config.yml
+++ b/tests/integration/targets/dns_config/tasks/02_dns_config.yml
@@ -8,6 +8,11 @@
     default_server_ips: []
     default_search_domains: []
     actual_uuid: ""
+    # Try to use only valid public DNS servers during testing
+    # At least the first entry should be a valid DNS resolver server.
+    # Well known servers:
+    # 1.1.1.1 1.0.0.1 - cloudflare
+    # 8.8.8.8 8.8.4.4 - google
 
   block:
     - name: Get default configs
@@ -36,7 +41,7 @@
           - example.domain1.com
           - example.domain2.com
         dns_servers:
-          - 1.2.3.4
+          - 1.1.1.1
           - 5.6.7.8
         state: set
       register: result
@@ -47,7 +52,7 @@
           - result.changed == True
           - result.diff.before != result.diff.after
           - info.record.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - info.record.server_ips == ["1.2.3.4", "5.6.7.8"]
+          - info.record.server_ips == ["1.1.1.1", "5.6.7.8"]
           - info.record.uuid == actual_uuid
 
     - name: Do the previous task again - Overwrite all entries (search_domains, dns_servers)
@@ -56,7 +61,7 @@
           - example.domain1.com
           - example.domain2.com
         dns_servers:
-          - 1.2.3.4
+          - 1.1.1.1
           - 5.6.7.8
         state: set
       register: result
@@ -67,13 +72,13 @@
           - result.changed == False
           - result.diff.before == result.diff.after
           - info.record.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - info.record.server_ips == ["1.2.3.4", "5.6.7.8"]
+          - info.record.server_ips == ["1.1.1.1", "5.6.7.8"]
           - info.record.uuid == actual_uuid
 
     - name: PREPEND new 'dns_servers' to existing DNS config
       scale_computing.hypercore.dns_config:
         dns_servers:
-          - 0.0.0.0
+          - 1.0.0.1
           - 0.1.1.1
         state: before
       register: result
@@ -84,13 +89,13 @@
           - result.changed == True
           - result.diff.before != result.diff.after
           - info.record.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - info.record.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - info.record.server_ips == ["1.0.0.1", "0.1.1.1", "1.1.1.1", "5.6.7.8"]
           - info.record.uuid == actual_uuid
 
     - name: Do the previous task again - PREPEND new 'dns_servers' to existing DNS config
       scale_computing.hypercore.dns_config:
         dns_servers:
-          - 0.0.0.0
+          - 1.0.0.1
           - 0.1.1.1
         state: before
       register: result
@@ -101,7 +106,7 @@
           - result.changed == False
           - result.diff.before == result.diff.after
           - info.record.search_domains == ["example.domain1.com", "example.domain2.com"]
-          - info.record.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - info.record.server_ips == ["1.0.0.1", "0.1.1.1", "1.1.1.1", "5.6.7.8"]
           - info.record.uuid == actual_uuid
 
     - name: PREPEND new 'search_domains' to existing DNS config
@@ -117,7 +122,7 @@
           - result.changed == True
           - result.diff.before != result.diff.after
           - info.record.search_domains == ["example.domain0.com", "example.domain1.com", "example.domain2.com"]
-          - info.record.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - info.record.server_ips == ["1.0.0.1", "0.1.1.1", "1.1.1.1", "5.6.7.8"]
           - info.record.uuid == actual_uuid
 
     - name: PREPEND to 'search_domains' with duplicates
@@ -134,7 +139,7 @@
           - result.changed == True
           - result.diff.before != result.diff.after
           - info.record.search_domains == ["example.domain1.com", "example.domain0.com", "example.domain2.com"]
-          - info.record.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8"]
+          - info.record.server_ips == ["1.0.0.1", "0.1.1.1", "1.1.1.1", "5.6.7.8"]
           - info.record.uuid == actual_uuid
 
     - name: APPEND new 'dns_servers' to existing DNS config
@@ -151,7 +156,7 @@
           - result.changed == True
           - result.diff.before != result.diff.after
           - info.record.search_domains == ["example.domain1.com", "example.domain0.com", "example.domain2.com"]
-          - info.record.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
+          - info.record.server_ips == ["1.0.0.1", "0.1.1.1", "1.1.1.1", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
           - info.record.uuid == actual_uuid
 
     - name: APPEND new 'search_domains' to existing DNS config
@@ -167,7 +172,7 @@
           - result.changed == True
           - result.diff.before != result.diff.after
           - info.record.search_domains == ["example.domain1.com", "example.domain0.com", "example.domain2.com", "example.domain3.com"]
-          - info.record.server_ips == ["0.0.0.0", "0.1.1.1", "1.2.3.4", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
+          - info.record.server_ips == ["1.0.0.1", "0.1.1.1", "1.1.1.1", "5.6.7.8", "9.9.9.9", "0.9.9.9"]
           - info.record.uuid == actual_uuid
 
     - name: Clear all entries by using 'state=set'
