--- a/roles/version_update_single_node/tasks/main.yml
+++ b/roles/version_update_single_node/tasks/main.yml
@@ -1,44 +1,41 @@
 ---
-- environment:
-    SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username }}"
-    SC_PASSWORD: "{{ sc_password }}"
-    SC_TIMEOUT: "{{ sc_timeout }}"
+- name: Get all available running VMs
+  scale_computing.hypercore.vm_info:
+  register: vms
 
-  block:
-    - name: Get all available VMs
-      scale_computing.hypercore.vm_info:
-      register: vms
-    - ansible.builtin.debug:
-        var: vms
+- name: Show all VMs
+  ansible.builtin.debug:
+    var: vms
 
-    - name: Shutdown VMs
-      scale_computing.hypercore.vm:
-        vm_name: "{{ item.vm_name }}"
-        power_state: shutdown
-      loop: "{{ vms }}"
-      register: vm_shutdown_result
+- name: Shutdown VMs
+  scale_computing.hypercore.vm_params:
+    vm_name: "{{ item.vm_name }}"
+    power_state: shutdown
+  when: item.power_state == running
+  loop: "{{ vms }}"
+  register: vm_shutdown_result
 
-    - name: Get available updates
-      scale_computing.hypercore.api:
-        action: get
-        endpoint: /rest/v1/Update
-      register: available_updates
+- name: Get available updates
+  scale_computing.hypercore.api:
+    action: get
+    endpoint: /rest/v1/Update
+  register: available_updates
 
-    - name: Update HC3
-      scale_computing.hypercore.api:
-        action: post
-        endpoint: "/rest/v1/Update/{{ item.uuid }}/apply"
-      when: available_updates
-      loop: "{{ available_updates }}"
+- name: Update HC3
+  scale_computing.hypercore.api:
+    action: post
+    endpoint: "/rest/v1/Update/{{ item.uuid }}/apply"
+  when: available_updates
+  loop: "{{ available_updates }}"
 
-    - name: Start VMs
-      scale_computing.hypercore.vm:
-        vm_name: "{{ item.vm_name }}"
-        power_state: start
-      loop: "{{ vms }}"
-      register: vm_start_result
+- name: Start VMs
+  scale_computing.hypercore.vm_params:
+    vm_name: "{{ item.vm_name }}"
+    power_state: start
+  when: item.power_state == running  # if the initial power_state == running
+  loop: "{{ vms }}"
+  register: vm_start_result
 
-    # -----------------------------------------
+# -----------------------------------------
 
-    # TODO: (integration) test for this role
+# TODO: (integration) test for this role
